name                          : json-b
version                       : 0.0.0
category                      : Text
license                       : BSD3
license-file                  : LICENSE
author                        : Jason Dusek
maintainer                    : jsonb@solidsnack.be 
homepage                      : http://github.com/jsnx/JSONb/
synopsis                      : JSON parser that uses byte strings.
description                   :
  This parser consumes lazy ByteStrings to produce JSON in a simple, efficient
  format backed with a strict ByteStrings, Rationals and ByteString tries.


cabal-version                 : >= 1.2
build-type                    : Simple
extra-source-files            : README
                                Tests/SimpleUnits.hs


library
  build-depends               : base 
                              , containers
                              , utf8-string >= 0.3
                              , bytestring >= 0.9
                              , bytestringparser-temporary >= 0.4.1
                              , bytestring-nums >= 0.3.1
                              , bytestring-trie >= 0.1.4
  exposed-modules             : JSONb
                                Data.JSON.Simple
                                Data.JSON.Schema
                                Data.JSON.Schema.Display
                                Data.ByteString.JSON.Decode
                                Data.ByteString.JSON.Encode
                                Text.JSON.Escape
  extensions                  : StandaloneDeriving
                                PatternGuards
                                TypeSynonymInstances
                                FlexibleInstances
                                EmptyDataDecls
                                GADTs


executable                      json-schema
  main-is                     : examples/JSONSchema.hs
  build-depends               : base 
                              , containers
                              , utf8-string >= 0.3
                              , bytestring >= 0.9
                              , bytestringparser-temporary >= 0.4.1
                              , bytestring-nums >= 0.3.1
                              , bytestring-trie >= 0.1.4
  extensions                  : StandaloneDeriving
                                PatternGuards
                                TypeSynonymInstances
                                FlexibleInstances
                                EmptyDataDecls
                                GADTs



